2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* reports/gebuehrenbescheid.jrxml: Verbesserungen am Template (Platz
	  zwischen Elementen zueinander).

2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* build.xml: Es gibt nun zwei unterschiedliche Clean-Tasks.
	  clean:    Löscht das `build` und `dist` Verzeichnis sowie die übersetzten
	            JasperReports Templates.
	  cleanall: Löscht `build`, `dist`, die übersetzten Tempaltes und auch das
	            `doc` Verzeichnis.

2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* reports/gebuehrenbescheid.jrxml: Der erste Entwurf eines
	  Gebührenbescheid-Templates. Hier müssen/sollten noch ein paar Anpassungen
	  gemacht werden (Schriftgröße, Abstand von Feldern zueinander, etc).

	* src/de/bielefeld/umweltamt/aui/icons/gebuehrenbescheid-icon.jpg: Dieses
	  Icon wird vom Gebührenbescheid referenziert.

	* lib/groovy-all-1.7.5.jar: Beim Übersetzen des Gebührenbescheides wird
	  diese Lib benötigt (Abhängigkeit von JasperReports).

2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/utils/PDFExporter.java: Ein paar
	  Änderungen, damit die Jasper Templates gefunden werden, egal ob man AUIK
	  aus den übersetzten Quellen startet, oder aus einem Jar-Archiv. Dazu wird
	  der Resource-Mechanismus aus Class.getResourceAsStream() genutzt.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Anpassungen des PDF Exports bzgl der Änderungen in PDFExporter.

2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Implementation einer neuen Methode getBescheidDruckMap() zur Ermittlung
	  der benötigten Parameter zum Befüllen eines Gebührenbescheides.
	  Es sind jedoch noch ein paar fehlende Parameter, bei denen noch unklar
	  ist, woher diese Informationen stammen sollen (siehe `TODO` im Code).

2010-12-16  Ingo Weinzierl <ingo@intevation.de>
